// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic button 1`] = `
.c0 {
  padding: 10px;
  background-color: silver;
}

<button
  className="c0"
  pink={false}
/>
`;

exports[`renders pink button 1`] = `
.c0 {
  padding: 10px;
  background-color: hotpink;
}

<button
  className="c0"
  pink={true}
/>
`;
